fix to header on mobile

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -482,7 +482,7 @@ h1 {
   }
 
   .header-title {
-    font-size: 18px; /* Reduce font size for mobile */
+    font-size: 16px; /* Reduce font size for mobile */
     padding-left: 0; /* Remove extra padding on smaller screens */
     padding-right: 2px;
     text-underline-offset: 8px; /* Adjust underline offset */
@@ -497,7 +497,7 @@ h1 {
   }
 
   .buy-button {
-    padding: 10px 20px; /* Reduce padding for smaller button size */
+    padding: 10px 10px; /* Reduce padding for smaller button size */
     font-size: 14px; /* Adjust font size */
     transform: translateX(0); /* Remove translate to keep centered */
   }
